todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:  
      labels:
        app: todo-app
    spec:  
      containers:
        - name: todo-app
          image: todo-app:local
          ports:
            - containerPort: 3000
