todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30080 # Expose this port OUTSIDE the cluster ## main gate
      protocol: TCP
      port: 3000 # Port in the cluster ## app door
      targetPort: 3000 # Port your app is running on inside the container ## services internal door
